# georithm

./: .gitignore  CMakeLists.txt  Folder.DotSettings  README.md
.github/workflows/: build-and-test.yml
include/georithm/: ArithmeticOperators.hpp  BasicConcepts.hpp  Bounding.hpp  BoundingRect.hpp  Concepts.hpp  Contains.hpp  Defines.hpp  GeometricTraits.hpp  Intersection.hpp  Intersects.hpp  Line.hpp  Overlaps.hpp  RangeAlgorithms.hpp  Rect.hpp  Utility.hpp  Vector.hpp
include/georithm/component/: Translation.hpp
include/georithm/transform/: Rotate.hpp  Scale.hpp  Shear.hpp  Translate.hpp  Translation.hpp
test/: CMakeLists.txt  CMakeSettings.json  LineTest.cpp  RectTest.cpp  VectorTest.cpp  main.cpp
